--- a/samples/Google/Analytics/CuteAnimalsiOS/CuteAnimalsiOS.csproj
+++ b/samples/Google/Analytics/CuteAnimalsiOS/CuteAnimalsiOS.csproj
@@ -1,20 +1,23 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project DefaultTargets="Build" ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
+    <TargetFramework>net6.0-ios</TargetFramework>
+    <RuntimeIdentifiers Condition="!Exists('$(ProjectAssetsFile)')">iossimulator-x64;ios-arm64</RuntimeIdentifiers>
+    <RuntimeIdentifiers Condition="Exists('$(ProjectAssetsFile)')"></RuntimeIdentifiers>
+    <RuntimeIdentifier>iossimulator-x64</RuntimeIdentifier>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">iPhoneSimulator</Platform>
     <ProductVersion>8.0.30703</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{EBF60C41-86FD-4FFC-853A-72591179EDB8}</ProjectGuid>
-    <ProjectTypeGuids>{FEACFBD2-3405-455C-9665-78FE426C6842};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <OutputType>Exe</OutputType>
+    <Nullable>enable</Nullable>
+    <ImplicitUsings>true</ImplicitUsings>
+    <SupportedOSPlatformVersion>9.0</SupportedOSPlatformVersion>
     <RootNamespace>CuteAnimalsiOS</RootNamespace>
     <IPhoneResourcePrefix>Resources</IPhoneResourcePrefix>
+    <Platforms>iPhoneSimulator;iPhone</Platforms>
+    <Configurations>Debug;Release</Configurations>
+    <IsPackable>false</IsPackable>
     <AssemblyName>CuteAnimalsiOS</AssemblyName>
-    <OutputPath>bin\$(Platform)\$(Configuration)</OutputPath>
-    <IntermediateOutputPath>obj\$(Platform)\$(Configuration)</IntermediateOutputPath>
-    <MSBuildProjectExtensionsPath>obj\$(MSBuildProjectName)\</MSBuildProjectExtensionsPath>
-    <RestoreProjectStyle>PackageReference</RestoreProjectStyle>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|iPhoneSimulator' ">
     <DebugSymbols>true</DebugSymbols>
@@ -78,88 +81,18 @@
     </IpaPackageName>
     <MtouchLink>SdkOnly</MtouchLink>
   </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Ad-Hoc|iPhone' ">
-    <DebugType>full</DebugType>
-    <Optimize>true</Optimize>
-    <DefineConstants>__MOBILE__;__IOS__;</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <ConsolePause>false</ConsolePause>
-    <CodesignEntitlements>Entitlements.plist</CodesignEntitlements>
-    <BuildIpa>true</BuildIpa>
-    <CodesignProvision>Automatic:AdHoc</CodesignProvision>
-    <CodesignKey>iPhone Distribution</CodesignKey>
-    <MtouchI18n>
-    </MtouchI18n>
-    <MtouchArch>ARMv7, ARM64</MtouchArch>
-    <MtouchLink>SdkOnly</MtouchLink>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'AppStore|iPhone' ">
-    <DebugType>full</DebugType>
-    <Optimize>true</Optimize>
-    <DefineConstants>__MOBILE__;__IOS__;</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <ConsolePause>false</ConsolePause>
-    <CodesignEntitlements>Entitlements.plist</CodesignEntitlements>
-    <CodesignProvision>Automatic:AppStore</CodesignProvision>
-    <CodesignKey>iPhone Distribution</CodesignKey>
-    <MtouchI18n>
-    </MtouchI18n>
-    <MtouchArch>ARMv7, ARM64</MtouchArch>
-    <MtouchLink>SdkOnly</MtouchLink>
-  </PropertyGroup>
   <ItemGroup>
-    <Reference Include="System" />
-    <Reference Include="System.Xml" />
-    <Reference Include="System.Core" />
-    <Reference Include="MonoTouch.Dialog-1" />
-    <Reference Include="Xamarin.iOS" />
   </ItemGroup>
-  <ItemGroup>
-    <BundleResource Include="Resources\Default-568h%402x.png" />
-    <BundleResource Include="Resources\Bunny-1.jpg" />
-    <BundleResource Include="Resources\Bunny-2.jpg" />
-    <BundleResource Include="Resources\Bunny-3.jpg" />
-    <BundleResource Include="Resources\Cat-1.jpg" />
-    <BundleResource Include="Resources\Cat-2.jpg" />
-    <BundleResource Include="Resources\Cat-3.jpg" />
-    <BundleResource Include="Resources\Cat-4.jpg" />
-    <BundleResource Include="Resources\Lion-1.jpg" />
-    <BundleResource Include="Resources\Lion-2.jpg" />
-    <BundleResource Include="Resources\Lion-3.jpg" />
-    <BundleResource Include="Resources\Lion-4.jpg" />
-    <BundleResource Include="Resources\Monkey-1.jpg" />
-    <BundleResource Include="Resources\Monkey-2.jpg" />
-    <BundleResource Include="Resources\Monkey-3.jpg" />
-    <BundleResource Include="Resources\Monkey-4.jpg" />
-    <BundleResource Include="Resources\Monkey-5.jpg" />
-    <BundleResource Include="Resources\Tiger-1.jpg" />
-    <BundleResource Include="Resources\Tiger-2.jpg" />
-    <BundleResource Include="Resources\Monkey-8.jpg" />
-    <BundleResource Include="Resources\Monkey-7.jpg" />
-    <BundleResource Include="Resources\Monkey-6.jpg" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Info.plist" />
-    <None Include="Entitlements.plist" />
-  </ItemGroup>
-  <ItemGroup>
-    <Compile Include="Main.cs" />
-    <Compile Include="AppDelegate.cs" />
-    <Compile Include="DVCMenu.cs" />
-    <Compile Include="DVCCategory.cs" />
-    <Compile Include="AnimalViewController.cs" />
-  </ItemGroup>
-  <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
   <Import Project="$(MSBuildThisFileDirectory)..\..\..\..\source\Google\Analytics\Analytics.targets" />
   <ItemGroup>
-    <ProjectReference Include="..\..\..\..\source\Google\Analytics\Analytics.csproj">
-      <Project>{36FD3346-EA1E-41A3-91D2-1C380E97BA34}</Project>
-      <Name>Analytics</Name>
-    </ProjectReference>
+    <ProjectReference Include="..\..\..\..\source\Google\Analytics\Analytics.csproj" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Xamarin.Build.Download" Version="0.11.0" />
+  </ItemGroup>
+  <ItemGroup>
+    <BundleResource Condition="'$(_ResourcePrefix)' != ''" Update="Resources\Default-568h%402x.png">
+      <Link>Resources\Default-568h%402x.png</Link>
+    </BundleResource>
   </ItemGroup>
 </Project>
